--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@ngrx/effects": "^16.3.0",
+    "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^16.3.0",
     "bootstrap": "^3.4.1",
     "install": "^0.13.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@ngrx/store-devtools": "^17.0.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
